[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/sprites/enemies/Ball and Chain Bot/idle.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/enemies/Ball and Chain Bot/run.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemies/Ball and Chain Bot/attack.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemies/Ball and Chain Bot/death.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/BallChain.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/enemies/Ball and Chain Bot/charge.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemies/Ball and Chain Bot/transition to charge.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 78, 126, 39 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 117, 126, 39 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 156, 126, 39 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 195, 126, 39 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 234, 126, 39 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 273, 126, 39 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 78, 126, 39 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 117, 126, 39 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 156, 126, 39 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 195, 126, 39 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 234, 126, 39 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 273, 126, 39 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 78, 126, 39 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 117, 126, 39 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 78, 126, 39 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 117, 126, 39 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 156, 126, 39 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 78, 126, 39 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 117, 126, 39 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 156, 126, 39 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Charge",
"speed": 15.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "ChargeTransition",
"speed": 15.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 9.77428, 14.9429 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 27.5753, 11.1675 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 27.388, 9.85646 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 14.8208, 14.4734 )

[node name="BallChain" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 33
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.210236, 0 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 27 )
animation = "Charge"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.06538, 6.64826 )
shape = SubResource( 28 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16.2941, 0 )
enabled = true
cast_to = Vector2( 0, 22 )
collision_mask = 2

[node name="PlayerDetectorArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectorArea"]
position = Vector2( 46.4475, 10.3009 )
shape = SubResource( 29 )

[node name="EnemyAtkArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAtkArea"]
position = Vector2( 46.4475, 10.1136 )
shape = SubResource( 30 )

[node name="SidesChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 5.2556, 6.72717 )
shape = SubResource( 37 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetectorArea" to="." method="_on_PlayerDetectorArea_body_entered"]
[connection signal="body_entered" from="EnemyAtkArea" to="." method="_on_EnemyAtkArea_body_entered"]
[connection signal="area_entered" from="SidesChecker" to="." method="_on_SidesChecker_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
